# AudioEthernet

./: .gitignore  LICENSE  README.md  pyproject.toml  start_receiver_low.cmd  start_sender_low.cmd
scripts/: remote_sender_control.ps1
src/audioethernet/: __init__.py  audio_capture.py  audio_playback.py  cli.py  config.py  discovery.py  firewall.py  jitter_buffer.py  logging_setup.py  metrics.py  protocol.py  receiver_app.py  sender_app.py  transport_udp.py
tests/: test_cli.py  test_config.py  test_firewall.py  test_protocol.py  test_receiver_sync.py
