[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audioethernet"
version = "0.1.1"
description = "Low-latency LAN audio bridge for Windows 10/11"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "AudioEthernet Contributors"}
]
keywords = ["audio", "ethernet", "wasapi", "lan", "streaming"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Multimedia :: Sound/Audio"
]
dependencies = [
  "numpy>=1.26",
  "sounddevice>=0.4.6",
  "soundcard>=0.4.6",
  "psutil>=5.9.8"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[project.scripts]
audioethernet = "audioethernet.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
